# ChangeLog for dev-ruby/rack-openid
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rack-openid-1.0.3 (07 May 2010)

  07 May 2010; Hans de Graaff <graaff@gentoo.org> +rack-openid-1.0.3.ebuild:
  Version bump.

*rack-openid-0.2.2 (22 Jan 2010)

  22 Jan 2010; Hans de Graaff <graaff@gentoo.org> +rack-openid-0.2.2.ebuild,
  +metadata.xml:
  Initial import.
