@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST rack-openid-0.2.2.gem 6144 RMD160 b464e409749ebf58afecb7046a084b311641cfd6 SHA1 5359e3da52fa4f9c856726cfe4f0034e276adb61 SHA256 d08c1c06eb3b5e0d45219f4453d7b1da56b4d8ae3cd90ffafcfa27945be4c77a
 DIST rack-openid-1.0.3.gem 7168 RMD160 6b26f2a7b680ac32e336efeaecec29e8cc9143aa SHA1 cc4ec84024e984c7ed9494d5ce5b0e9ba9152062 SHA256 d1c62d86c4ddeeb66fd34a9392846540c7b3e91bc40ad111fa77f436fe5f16e5
-EBUILD rack-openid-0.2.2.ebuild 533 RMD160 286125093e0fb8bf74c98b892452e4f39ca8b843 SHA1 6f3dd898f16972caffc70ef82faf9747dd4dce80 SHA256 5baf0f76153c7c0888d3aed2eee9baa3847a29ef79e30241faa41763ede21979
 EBUILD rack-openid-1.0.3.ebuild 533 RMD160 286125093e0fb8bf74c98b892452e4f39ca8b843 SHA1 6f3dd898f16972caffc70ef82faf9747dd4dce80 SHA256 5baf0f76153c7c0888d3aed2eee9baa3847a29ef79e30241faa41763ede21979
-MISC ChangeLog 396 RMD160 639a848aed10be10bc54f080ace0366ba4640efc SHA1 f857f0bd17dec3baacfa3d8db909d2e01f03d192 SHA256 e55914896ee11cddfb0620dfaf705fa3759975297017d049481c79dc28db9ed2
+MISC ChangeLog 496 RMD160 023569b836abb3a49852defb6fdf60f3c966b6a8 SHA1 3b21e69f6fc7faf8ae9aa54ba65976953f65f2fa SHA256 dc7805cdb49c66dfea569f05441d4604cc4a422b49a4f61eaee15400c242a2ce
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkvkBBwACgkQeM7EJeUH71MR6ACeOkp4UXkwx9pfZRzlA7SW5gva
-eTYAoIs52LH1Uz2gkU+2XXuNB/K3aK6l
-=Jy1w
+iF4EAREIAAYFAk0+0EgACgkQrnu0mw69Jkp2nQD+N2GdYVr0ODG2DaSHqPW7f2QD
+Wg5QCSH64gRfOGt0lpoA/3ovgUD1nu54ApCe/AkkTOSHUYWH9QD6vCrFt5cWiJtq
+=3lIJ
 -----END PGP SIGNATURE-----
