@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rack-openid
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Hans de Graaff <graaff@gentoo.org> -rack-openid-0.2.2.ebuild:
+  Remove old version.
 
 *rack-openid-1.0.3 (07 May 2010)
 
